# smart-farm-robot-demo

./: .gitignore  API_VERIFICATION_SUMMARY.md  AUTO_FARM_COMPLETE.md  AUTO_FARM_DESIGN.md  BUILD_ON_MACOS.md  CROSS_PLATFORM_SOLUTION.md  GREEDY_HARVEST_FEATURE.md  HARVEST_ANALYSIS.md  INTEGRATION_COMPLETE.md  MACOS_ADAPTATION_SUMMARY.md  PACKAGING_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SMART_FARM_PAPER_CN.md  WINSOCK_PROJECT_SUMMARY.md  WINSOCK_PROTOCOL.md  auto_farm_controller.py  auto_task_executor.py  cart_movement_api.py  demo_cart_movement.py  example_auto_farm_with_animation.py  laser_training_data.json  monitor_harvest.py  package.sh  package_project.py  path_planner.py  plant_manager.py  quick_status.sh  requirements.txt  resource_manager.py  server_game.py  state_monitor.py  test_all_apis.py  test_cart_movement.py  test_enhanced_cart_apis.py
templates/: game.html  test_step1.html  test_websocket.html
winsock_client/: FarmClient.h
winsock_server/: CMakeLists.txt  FarmServer.cpp  FarmServer.h  README.md  main.cpp  protocol.cpp  protocol.h  server_config.json  socket_compat.h
